--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Number Puzzle</title>
-    <meta name="description" content="Number Puzzle Game - By Nwoye Ezekiel">
+    <meta name="description" content="Number Puzzle Game - By Wemi Moyela">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
