--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Number Puzzle</title>
-    <meta name="description" content="Number Puzzle Game - By Wemi Moyela">
+    <title>Order the Numbers</title>
+    <meta name="description" content="Order the Numbers - By Wemi Moyela">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
